--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url= jdbc:postgres://xwswmdsc:2SU45fUN_nZxR80mrWy5Qw9_391RaOLh@echo.db.elephantsql.com:5432/xwswmdsc
-spring.datasource.username=2SU45fUN_nZxR80mrWy5Qw9_391RaOLh
+spring.datasource.url= jdbc:postgresql://169.46.16.81:5432/db_auth
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 
